Bug 244395 - kword:msoffice2003:light green colored underline is not getting displayed properly.
Summary: kword:msoffice2003:light green colored underline is not getting displayed pro...
Status: VERIFIED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: doc (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries All
: NOR normal
Target Milestone: ---
Assignee: Matus Uzak
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-16 12:29 UTC by Lassi Nieminen
Modified: 2011-08-18 09:16 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
MS Word 2003 document to be open in Kword (20.00 KB, application/msword)
2010-06-16 12:29 UTC, Lassi Nieminen
Details
Screenshot of the document in MS Word 2003 (2.25 MB, image/bmp)
2010-06-16 12:31 UTC, Lassi Nieminen
Details
Screenshot of the document in Kword (121.04 KB, image/pjpeg)
2010-06-16 12:32 UTC, Lassi Nieminen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Faure 2010-07-12 17:59:47 UTC


---- Reported by lassi.ta.nieminen@nokia.com 2010-06-16 13:29:22 +0300 ----

Created an attachment
MS Word 2003 document to be open in Kword

SOFTWARE VERSION:
  Kubuntu 9.10
  Koffice (svn version 1137745)
  Test document (MS Word 2003):mw03_text_with_font_effects.doc

STEPS LEADING TO THE PROBLEM:
  1. Open the attached document in MS Word 2003.
  2. Open the same document in Kword.
  3. Observe the underline color of the text.

EXPECTED OUTCOME:
 Kword should be able to display the underline color of the text properly.

ACTUAL OUTCOME:
 Kword is not displaying light green colored underline properly.

FREQUENCY:
 Always



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-06-16 13:31:26 +0300 ----

Created an attachment
Screenshot of the document in MS Word 2003



---- Additional Comments From lassi.ta.nieminen@nokia.com 2010-06-16 13:32:56 +0300 ----

Created an attachment
Screenshot of the document in Kword



--- Bug imported by faure@kde.org 2010-07-12 17:59  ---

This bug was previously known as _bug_ 175012.

Imported an attachment (id=49026)
Imported an attachment (id=49027)
Imported an attachment (id=49028)
Comment 1 Matus Uzak 2011-07-28 15:28:10 UTC
Git commit 26eda3e351b991dbb0c7846b6a841a86cf705174 by Matus Uzak.
Committed on 28/07/2011 at 17:26.
Pushed by uzak into branch 'master'.

DOC: Improved support of text underline.

BUG:244395

M  +131  -64   filters/words/msword-odf/paragraph.cpp
M  +6    -0    filters/words/msword-odf/wv2/src/word97_generated.h
M  +15   -0    filters/words/msword-odf/wv2/src/word97_helper.cpp
M  +26   -0    filters/words/msword-odf/msdoc.h
M  +2    -0    filters/words/msword-odf/wv2/src/word97_generated.cpp

http://commits.kde.org/calligra/26eda3e351b991dbb0c7846b6a841a86cf705174
Comment 2 swathi 2011-08-18 09:16:42 UTC
Verified in ef7c0d057c1c2132df28423aa58689549f46d39d.