DOC: Improved support of text underline.

BUG:244395